compiler/tests-spec/testData/diagnostics/s-16.30_when-expression/p-3/neg/1.1.kt

/*
 KOTLIN SPEC TEST (NEGATIVE)

 SECTION 16.30: When expression
 PARAGRAPH: 3
 SENTENCE 1: When expression without bound value (the form where the expression enclosed in parantheses is absent) evaluates one of the many different expressions based on corresponding conditions present in the same when entry.
 NUMBER: 1
 DESCRIPTION: 'When' without bound value and missed control structure body.
 */

fun case_1(value: Int) {
    when {
        value == 1 -><!SYNTAX!><!>
    }
}